impl ArtNode and add some class imterface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,8 @@ file(GLOB SOURCES
     storage/*.cpp
     core/*.h
     core/*.cpp
+    core/art/*.hpp
+    util/*.hpp
 )
 
 add_executable(Skilo main.cpp ${SOURCES})
