--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,19 @@ if(NOT EXISTS ${DEP_ROOT_DIR})
     file(MAKE_DIRECTORY ${DEP_ROOT_DIR})
 endif()
 
+file(GLOB SOURCES
+    storage/*.h
+    storage/*.cpp
+    core/*.h
+    core/*.cpp
+    core/schema/*.h
+    core/schema/*.cpp
+    core/index/*.h
+    core/index/*.hpp
+    core/index/*.cpp
+    util/*.hpp
+)
+
 set(BUILD_DEPS "yes" CACHE STRING "")
 set(ALL_SRCS ${ALL_SRCS} ${SOURCES} CACHE INTERNAL "description")
 set(CORE_LIBS ${G3LOGGER_LIBRARIES} g3logger pthread rocksdb roaring for)
@@ -17,19 +30,6 @@ set(CORE_LIBS ${G3LOGGER_LIBRARIES} g3logger pthread rocksdb roaring for)
 #include(../cmake/g3logger.cmake)
 include(../cmake/CRoaring.cmake)
 include(../cmake/libfor.cmake)
-
-file(GLOB SOURCES
-    storage/*.h
-    storage/*.cpp
-    core/*.h
-    core/*.cpp
-    core/schema/*/h
-    core/schema/*/cpp
-    core/index/*.h
-    core/index/*.hpp
-    core/index/*.cpp
-    util/*.hpp
-)
 
 add_executable(Skilo main.cpp ${SOURCES})
 target_link_libraries(Skilo ${CORE_LIBS})
