--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,16 @@ project(Skilo LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(RINX_ROOT ${CMAKE_SOURCE_DIR}/src/network/Rinx)
 
-add_subdirectory(${CMAKE_SOURCE_DIR}/src/network/Rinx)
+add_subdirectory(${RINX_ROOT}/)
 
 include_directories(3rd/include)
+include_directories(${RINX_ROOT}/include)
+include_directories(${CMAKE_SOURCE_DIR}/src)
 link_directories(3rd/lib /usr/local/lib)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_SOURCE_DIR}/test)
-
 
 set(ALL_SRCS CACHE INTERNAL "" FORCE)
