improve add document batch return info

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CORE_LIBS ${G3LOGGER_LIBRARIES} g3logger pthread rocksdb roaring for Rinx)
 #message("SRCS: " ${ALL_SRCS})
 
 add_executable(skilo_test ${ALL_SRCS} libart/art.c art_tst.cpp scalar_tst.cpp schema_tst.cpp
-    document_tst.cpp tokenizer_tst.cpp collection_manager_tst.cpp hit_collector_tst.cpp)
+    document_tst.cpp tokenizer_tst.cpp collection_manager_tst.cpp hit_collector_tst.cpp skilo_server_tst.cpp)
 set_source_files_properties(libart/art.c PROPERTIES LANGUAGE CXX )
 
 
