encode uint32_t and fix CompressedScalar

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ file(GLOB SOURCES
     core/network/*.cpp
     storage/*.h
     storage/*.cpp
+    storage/*.hpp
     utility/*.h
     utility/*.cpp
     utility/*.hpp
