impl term fuzzy search and timing function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,6 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test)
 #add_executable(skilo_test ${ALL_SRCS} art_tst.cpp scalar_tst.cpp schema_tst.cpp document_tst.cpp
 #                tokenizer_tst.cpp collection_manager_tst.cpp hit_collector_tst.cpp skilo_server_tst.cpp
 #                    tst_config_reader.cpp auto_suggest_tst.cpp)
-add_executable(skilo_test ${ALL_SRCS} art_tst.cpp)
+add_executable(skilo_test ${ALL_SRCS} collection_manager_tst.cpp)
 target_link_libraries(skilo_test gtest gtest_main ${CORE_LIBS})
 
