impl chinese fuzzy search term and fix art iterate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,14 @@ set(BUILD_DEPS "yes" CACHE STRING "")
 include(cmake/g3logger.cmake)
 include(cmake/libfor.cmake)
 include(cmake/RocksDB.cmake)
+include(cmake/RocaPinyin.cmake)
 #include(cmake/CRoaring.cmake)
 
 include_directories(${DEP_ROOT_DIR}/${G3LOG_NAME}/build/include)
 include_directories(${DEP_ROOT_DIR}/${G3LOG_NAME}/src)
 include_directories(${DEP_ROOT_DIR}/${ROCKSDB_NAME}/include)
 include_directories(${DEP_ROOT_DIR}/${FOR_NAME})
+include_directories(${DEP_ROOT_DIR}/${ROCAPinYin_NAME})
 
 add_subdirectory(${RINX_ROOT}/)
 add_subdirectory(${CMAKE_SOURCE_DIR}/src)
@@ -67,5 +69,5 @@ else ()
 endif ()
 
 set(ROCKSDB_LIBS ${ROCKSDB_LIBRARIES} ${SNAPPY_LIB} ${ZLIB_LIBRARIES})
-set(CORE_LIBS ${G3LOGGER_LIBRARIES} ${FOR_LIBRARIES} ${ROCKSDB_LIBS} Rinx pthread dl CACHE INTERNAL "")
+set(CORE_LIBS ${G3LOGGER_LIBRARIES} ${FOR_LIBRARIES} ${ROCKSDB_LIBS} ${ROCAPinYin_LIBRARIES} Rinx pthread dl CACHE INTERNAL "")
 set(ALL_SRCS CACHE INTERNAL "" FORCE)
