1.impl multi term search 2.remove redundant headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ file(GLOB SOURCES
     core/index/*.hpp
     core/index/*.cpp
     core/search/*.h
+    core/search/*.hpp
     core/search/*.cpp
     core/network/*.h
     core/network/*.cpp
