1.make skilo sensitive to SIGINT 2.change skilo.conf path

--- a/skilo.conf
+++ b/skilo.conf
@@ -8,6 +8,6 @@
         "address":"127.0.0.1"
     },
     "extensions":{
-        "dict_dir":"/home/demonatic/Projects/Engineering Practice/Skilo/3rd/dict"
+        "dict_dir":"../3rd/dict"
     }
 }
